# cwubs-clubs-service

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: clubs.py  router.py  schemas.py
app/repository/: db.py  interfaces.py
app/service/: clubs.py  interfaces.py  result.py
