[project]
name = "cwubs-clubs-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Duncan Scuffell",email = "duncan.scuffell@btinternet.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "cwubs-models (>=0.1.5,<0.2.0)",
    "cwubs-shared (>=0.1.0,<0.2.0)",
    "fastapi (>=0.128.4,<0.129.0)",
    "sqlalchemy (>=2.0.43,<2.1.0)",
    "psycopg (>=3.2.10,<3.3.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]
packages = [
    { include = "app" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]
